<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!-- Title Bar -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/archia"
        android:gravity="center_horizontal"
        android:text="@string/title"
        android:textColor="#0000ff"
        android:textSize="15sp"
        android:textStyle="bold" />
    
    <!-- Search Bar -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/archia"
            android:gravity="center"
            android:text="@string/search_title"
            android:textColor="#6c757d"
            android:textStyle="bold" />

        <androidx.appcompat.widget.SearchView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/search_view_border"
            android:elevation="20dp"
            android:outlineAmbientShadowColor="@android:color/black"
            android:outlineSpotShadowColor="@android:color/black"
            android:padding="10dp"
            android:searchIcon="@drawable/ic_search_black_24dp" />

        <TextView
            android:id="@+id/date_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/archia"
            android:gravity="center"
            android:text="@string/date_time"
            android:textColor="#6c757d"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- Total Cases -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="1">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/confirmed_card"
            style="@style/CardView.Light"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="4dp"
            android:layout_weight="0.25"
            app:cardBackgroundColor="#34FFFFFF"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            app:cardPreventCornerOverlap="false">

            <LinearLayout
                android:id="@+id/confirm_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:weightSum="3">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/archia"
                    android:gravity="center"
                    android:text="@string/confirmed"
                    android:textColor="#ff0000"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/total_new_confirmed"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="#A9FF0000"
                    android:text="+0" />

                <TextView
                    android:id="@+id/confirmed_cases"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/archia"
                    android:gravity="center"
                    android:text="@string/demo_text"
                    android:textColor="#ff0000"
                    android:textSize="20sp" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/active_card"
            style="@style/CardView.Light"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="4dp"
            android:layout_weight="0.25"
            app:cardBackgroundColor="#34FFFFFF"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            app:cardPreventCornerOverlap="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:weightSum="3">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/archia"
                    android:gravity="center"
                    android:text="@string/active"
                    android:textColor="#0000ff"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/active_cases"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/archia"
                    android:gravity="center"
                    android:text="@string/demo_text"
                    android:textColor="#0000ff"
                    android:textSize="20sp" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/recovered_card"
            style="@style/CardView.Light"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="4dp"
            android:layout_weight="0.25"
            app:cardBackgroundColor="#34FFFFFF"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            app:cardPreventCornerOverlap="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:weightSum="3"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/archia"
                    android:text="@string/recovered"
                    android:gravity="center"
                    android:textColor="#28a745"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/total_new_recovered"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textColor="#A828A745"
                    android:gravity="center"
                    android:text="+0" />

                <TextView
                    android:id="@+id/recovered_cases"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:fontFamily="@font/archia"
                    android:text="@string/demo_text"
                    android:textColor="#28a745"
                    android:textSize="20sp" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/deceased_card"
            style="@style/CardView.Light"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="4dp"
            android:layout_weight="0.25"
            app:cardBackgroundColor="#34FFFFFF"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            app:cardPreventCornerOverlap="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:weightSum="3"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/archia"
                    android:text="@string/deceased"
                    android:gravity="center"
                    android:textColor="#6c757d"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/total_new_deceased"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="#A86C757D"
                    android:text="+0" />

                <TextView
                    android:id="@+id/deceased_cases"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:fontFamily="@font/archia"
                    android:text="@string/demo_text"
                    android:textColor="#6c757d"
                    android:textSize="20sp" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <!-- Title Bar -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="6">

        <TextView
            android:id="@+id/state"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:layout_weight="2"
            android:background="@drawable/listview_item_background"
            android:fontFamily="@font/archia"
            android:padding="8dp"
            android:text="@string/action_bar_state"
            android:textColor="#6c757d"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/confirmed"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:background="@drawable/listview_item_background"
            android:gravity="center"
            android:padding="6dp"
            android:text="@string/action_bar_c"
            android:textColor="#ff0000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/active"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:background="@drawable/listview_item_background"
            android:gravity="center"
            android:padding="6dp"
            android:text="@string/action_bar_a"
            android:textColor="#0000ff"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cured"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:background="@drawable/listview_item_background"
            android:gravity="center"
            android:padding="6dp"
            android:text="@string/action_bar_r"
            android:textColor="#28A744"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/deceased"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="@drawable/listview_item_background"
            android:gravity="center"
            android:padding="6dp"
            android:text="@string/action_bar_d"
            android:textColor="#6c757d"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!-- State Cases -->
        <ListView
            android:id="@+id/data"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@android:color/transparent"
            android:dividerHeight="5sp"
            android:paddingTop="2dp"
            android:scrollbars="none" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</LinearLayout>